<resources>
    <string name="app_name">First_kotlin_app</string>
    <string name="item1">Dice</string>
    <string name="item2">Historic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Tela de dados</string>
    <string name="hello_fragment">Tela do histórico de dados</string>
    <string name="boas_vindas">Bem vindo</string>
    <string name="d4">1d4</string>
    <string name="d6">1d6</string>
    <string name="d8">1d8</string>
    <string name="d10">1d10</string>
    <string name="d12">1d12</string>
    <string name="d20">1d20</string>
    <string name="d100">1d100</string>
</resources>