<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    tools:context=".fragments.DiceFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:rowCount="3"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/dice_4"
            android:layout_margin="5sp"
            android:background="@color/material_on_background_disabled"
            android:gravity="fill"
            android:text="@string/d4"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            app:icon="@drawable/d4"
            app:iconGravity="textTop"
            app:iconSize="64dp"
            app:iconTint="@color/my_white"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/dice_6"
            android:layout_margin="5sp"
            android:background="@color/material_on_background_disabled"
            android:gravity="fill"
            android:text="@string/d6"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            app:icon="@drawable/d6"
            app:iconGravity="textTop"
            app:iconSize="64dp"
            app:iconTint="@color/my_white"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/dice_8"
            android:layout_margin="5sp"
            android:background="@color/material_on_background_disabled"
            android:gravity="fill"
            android:text="@string/d8"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            app:icon="@drawable/d8"
            app:iconGravity="textTop"
            app:iconSize="64dp"
            app:iconTint="@color/my_white"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/dice_10"
            android:layout_margin="5sp"
            android:background="@color/material_on_background_disabled"
            android:gravity="fill"
            android:text="@string/d10"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            app:icon="@drawable/d10"
            app:iconGravity="textTop"
            app:iconSize="64dp"
            app:iconTint="@color/my_white"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/dice_12"
            android:layout_margin="5sp"
            android:background="@color/material_on_background_disabled"
            android:gravity="fill"
            android:text="@string/d12"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            app:icon="@drawable/d12"
            app:iconGravity="textTop"
            app:iconSize="64dp"
            app:iconTint="@color/my_white"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/dice_20"
            android:layout_margin="5sp"
            android:background="@color/material_on_background_disabled"
            android:gravity="fill"
            android:text="@string/d20"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            app:icon="@drawable/d20"
            app:iconGravity="textTop"
            app:iconSize="64dp"
            app:iconTint="@color/my_white"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/dice_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@color/material_on_background_disabled"
            android:gravity="fill"
            android:text="@string/d100"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            app:iconGravity="textTop"
            app:iconSize="64dp"
            app:iconTint="@color/my_white"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:ignore="RtlCompat" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>